--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCalc"
-        tools:text="BMI: 20" />
+        tools:text="BMI:" />
 
     <TextView
         android:id="@+id/txt_result_cat"
