--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,7 @@
         android:layout_marginLeft="8dp"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginEnd="8dp"
+        android:onClick="chart"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="20dp"
