--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.bmiCal.MainActivity">
     <item
-        android:id="@+id/action_about"
+        android:id="@+id/settings"
         android:orderInCategory="101"
         android:title="Settings"
         app:showAsAction="never" />
